# DemocratizingAI-OS-and-Lang

./: README.md  final_cleanup.py
Democratizing-AI-Lang/: .editorconfig  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
Democratizing-AI-Lang/.github/workflows/: ci.yml
Democratizing-AI-Lang/benches/: criterion.rs
Democratizing-AI-Lang/compiler/: Cargo.toml
Democratizing-AI-Lang/compiler/src/: ast.rs  codegen.rs  error.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs  utils.rs
Democratizing-AI-Lang/docs/: compiler.md  config.toml  language-reference.md
Democratizing-AI-Lang/docs/api/: stdlib.md
Democratizing-AI-Lang/docs/src/: README.md  SUMMARY.md
Democratizing-AI-Lang/docs/src/ai-features/: autodiff.md  benchmarking.md  deployment.md  distributed.md  evaluation.md  gpu.md  hardware.md  hyperparameter-tuning.md  neural-networks.md  optimization.md  profiling.md  serialization.md  training.md
Democratizing-AI-Lang/docs/src/ai-features/data/: loading.md  pipelines.md
Democratizing-AI-Lang/docs/src/ai-features/neural-networks/: activations.md  initializers.md  layers.md  loss-functions.md  metrics.md  optimizers.md
Democratizing-AI-Lang/docs/src/getting-started/: development-environment.md  hello-world.md  installation.md  quick-start.md
Democratizing-AI-Lang/docs/src/language-guide/: basic-syntax.md  concurrency.md  error-handling.md  memory-management.md  modules.md  resource-management.md  system-integration.md  types.md
Democratizing-AI-Lang/examples/: Cargo.toml  README.md  cuda_acceleration.rs  distributed_training.rs  mnist.rs  neural_network.rs  tensor_ops.rs
Democratizing-AI-Lang/stdlib/: Cargo.toml  build.rs
Democratizing-AI-Lang/stdlib/src/: autodiff.rs  cuda.rs  lib.rs  nn.rs  tensor.rs
Democratizing-AI-Lang/stdlib/src/core/: array.rs  error.rs  mod.rs  traits.rs  types.rs
Democratizing-AI-Lang/stdlib/src/kernels/: elementwise.cu
Democratizing-AI-Lang/test_debug/: Cargo.toml
Democratizing-AI-Lang/test_debug/src/: main.rs
Democratizing-AI-Lang/tests/: integration_test.rs
Democratizing-AI-Lang/tests/common/: mod.rs
Domocratizing-AI-OS/: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  aarch64-unknown-none.json  clippy.toml  rustfmt.toml
Domocratizing-AI-OS/.cargo/: config.toml
Domocratizing-AI-OS/.github/workflows/: ci.yml
Domocratizing-AI-OS/drivers/: Cargo.toml
Domocratizing-AI-OS/drivers/src/: lib.rs
Domocratizing-AI-OS/drivers/src/gpu/: mod.rs
Domocratizing-AI-OS/drivers/src/network/: mod.rs
Domocratizing-AI-OS/drivers/src/npu/: mod.rs
Domocratizing-AI-OS/drivers/src/pci/: mod.rs
Domocratizing-AI-OS/drivers/src/storage/: mod.rs
Domocratizing-AI-OS/drivers/src/usb/: mod.rs
Domocratizing-AI-OS/kernel/: Cargo.toml  build.rs
Domocratizing-AI-OS/kernel/src/: lib.rs  main.rs
Domocratizing-AI-OS/kernel/src/ai/: accelerator.rs  mod.rs  tensor.rs
Domocratizing-AI-OS/kernel/src/arch/: cpu.rs  mod.rs
Domocratizing-AI-OS/kernel/src/arch/aarch64/: boot.s  cache.rs  cpu.rs  exceptions.rs  exceptions.s  linker.ld  mmu.rs  mod.rs  registers.rs
Domocratizing-AI-OS/kernel/src/memory/: allocator.rs  frame.rs  heap.rs  mod.rs  paging.rs
Domocratizing-AI-OS/kernel/src/scheduler/: mod.rs
Domocratizing-AI-OS/kernel/src/sync/: mod.rs
Domocratizing-AI-OS/scripts/: dev.sh  setup.sh
Domocratizing-AI-OS/services/: Cargo.toml
Domocratizing-AI-OS/services/src/: lib.rs
Domocratizing-AI-OS/services/src/ai/: mod.rs
Domocratizing-AI-OS/services/src/device/: mod.rs
Domocratizing-AI-OS/services/src/fs/: mod.rs
Domocratizing-AI-OS/services/src/network/: mod.rs
Domocratizing-AI-OS/services/src/process/: mod.rs
Domocratizing-AI-OS/services/src/security/: mod.rs
Domocratizing-AI-OS/userland/: Cargo.toml
Domocratizing-AI-OS/userland/src/: lib.rs
Domocratizing-AI-OS/userland/src/ai/: mod.rs
Domocratizing-AI-OS/userland/src/debug/: mod.rs
Domocratizing-AI-OS/userland/src/monitor/: mod.rs
Domocratizing-AI-OS/userland/src/network/: mod.rs
Domocratizing-AI-OS/userland/src/shell/: mod.rs
Domocratizing-AI-OS/userland/src/storage/: mod.rs
