[workspace]
members = ["compiler", "stdlib", "examples", "benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sahibzada Allahyar"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/sahibzada/democratising"
documentation = "https://docs.rs/democratising"
homepage = "https://github.com/sahibzada/democratising"
description = "A programming language for democratizing AI development"
keywords = ["ai", "machine-learning", "compiler", "language", "cuda"]
categories = ["compilers", "science", "development-tools"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

# Compiler dependencies
llvm-sys = "170"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm17-0",
] }
cranelift = "0.103"
cranelift-module = "0.103"
cranelift-jit = "0.103"
target-lexicon = "0.12"

# CUDA support
cuda-runtime-sys = "0.3"
cuda-driver-sys = "0.3"
cuda-sys = "0.2"

# Machine learning
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
num = "0.4"
half = { version = "2.3", features = ["num-traits", "serde"] }

# Development tools
criterion = "0.5"
proptest = "1.4"
pretty_assertions = "1.4"
test-log = "0.2"

# Documentation
mdbook = "0.4"
pulldown-cmark = "0.9"
syntect = "5.1"

# Utilities
indicatif = "0.17"
console = "0.15"
plotters = "0.3"
chrono = "0.4"
dirs = "5.0"
tempfile = "3.9"
walkdir = "2.4"
which = "5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
