[package]
name = "democratising-stdlib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Standard library for the Democratising programming language"
keywords = ["ai", "machine-learning", "tensor", "cuda", "neural-networks"]
categories = ["science", "mathematics"]
build = "build.rs"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

# CUDA support
cuda-runtime-sys.workspace = true
cuda-driver-sys.workspace = true
cuda-sys.workspace = true

# Machine learning
ndarray = { workspace = true, features = ["serde", "rayon"] }
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
num.workspace = true
half = { workspace = true, features = ["num-traits", "serde"] }

# Parallel and distributed computing
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
futures = "0.3"

# Serialization and data formats
bincode = "1.3"
rmp-serde = "1.1"
csv = "1.3"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }

# Development utilities
pretty_assertions = { workspace = true, optional = true }
test-log = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
test-log.workspace = true
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
pkg-config = "0.3"
cmake = "0.1"
glob = "0.3"

[features]
default = ["cuda"]
cuda = []
cpu = []
distributed = ["tokio/full"]
testing-utils = ["pretty_assertions", "test-log", "proptest"]

# Optional hardware acceleration features
mkl = []
openblas = []
rocm = []
metal = []
vulkan = []

[lib]
name = "democratising_stdlib"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "tensor_ops"
harness = false

[[bench]]
name = "neural_networks"
harness = false

[[bench]]
name = "autodiff"
harness = false
