[package]
name = "drivers"
version = "0.1.0"
authors = ["Sahibzada Allahyar"]
edition = "2021"
description = "Hardware drivers for Democratizing AI OS"
repository = "https://github.com/sahibzadaallahyar/Democratizing-AI-OS"
license = "MIT OR Apache-2.0"

[lib]
name = "drivers"
path = "src/lib.rs"

[dependencies]
# Core dependencies
kernel = { path = "../kernel" }
log = { version = "0.4.20", default-features = false }
bitflags = "2.4.2"
spin = "0.9.8"
hashbrown = { version = "0.14.3", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# Numeric and data handling
num-traits = { version = "0.2.17", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
static_assertions = "1.1.0"
volatile = "0.5.1"
paste = "1.0.14"
cfg-if = "1.0.0"
zerocopy = { version = "0.7.32", default-features = false }

# Embedded support
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded-dma = "0.2.0"

# Data structures and algorithms
bitvec = { version = "1.0.1", default-features = false }
smallvec = { version = "1.11.2", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
heapless = "0.8.0"

# Memory and bytes handling
bytes = { version = "1.5.0", default-features = false }
memchr = { version = "2.7.1", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
scopeguard = { version = "1.2.0", default-features = false }

# ARM and hardware support
tock-registers = "0.8.1"
cortex-a = "8.1.1"
aarch64-cpu = "9.4.0"
arm-gic = "0.1.0"
arm-pl011 = "0.1.0"
arm-pl031 = "0.1.0"
arm-pl061 = "0.1.0"
arm-pl330 = "0.1.0"
arm-pl390 = "0.1.0"
arm-pmu = "0.1.0"
arm-smmu = "0.1.0"
arm-timer = "0.1.0"
arm-uart = "0.1.0"
arm-watchdog = "0.1.0"

# GPU support
vulkano = { version = "0.34.1", default-features = false }
metal = { version = "0.27.0", default-features = false }
wgpu = { version = "0.18.0", default-features = false }

# NPU/AI acceleration
onnxruntime = { version = "0.0.14", default-features = false }
tract-core = { version = "0.20.7", default-features = false }
tract-onnx = { version = "0.20.7", default-features = false }

# Network support
smoltcp = { version = "0.10.0", default-features = false }
etherparse = { version = "0.13.0", default-features = false }

# Storage support
nvme = { version = "0.5.0", default-features = false }
ahci = { version = "0.1.0", default-features = false }

# USB support
usb-device = { version = "0.3.2", default-features = false }
usbd-serial = { version = "0.2.0", default-features = false }
usbd-hid = { version = "0.7.0", default-features = false }

# PCI support
pcics = { version = "0.2.0", default-features = false }

[features]
default = ["gpu", "npu", "network", "storage", "usb", "pci"]
gpu = []
npu = []
network = []
storage = []
usb = []
pci = []

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
