[package]
name = "services"
version = "0.1.0"
authors = ["Sahibzada Allahyar"]
edition = "2021"
description = "System services for Democratizing AI OS"
repository = "https://github.com/sahibzadaallahyar/Democratizing-AI-OS"
license = "MIT OR Apache-2.0"

[lib]
name = "services"
path = "src/lib.rs"

[dependencies]
# Core dependencies
kernel = { path = "../kernel" }
drivers = { path = "../drivers" }
log = { version = "0.4.20", default-features = false }
bitflags = "2.4.2"
spin = "0.9.8"
hashbrown = { version = "0.14.3", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# Numeric and data handling
num-traits = { version = "0.2.17", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
static_assertions = "1.1.0"
paste = "1.0.14"
cfg-if = "1.0.0"

# Data structures and algorithms
bitvec = { version = "1.0.1", default-features = false }
smallvec = { version = "1.11.2", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
heapless = "0.8.0"
tinyvec = { version = "1.6.0", default-features = false }
either = { version = "1.9.0", default-features = false }
itertools = { version = "0.12.0", default-features = false }

# Serialization and data formats
serde = { version = "1.0.195", default-features = false }
uuid = { version = "1.6.1", default-features = false }
time = { version = "0.3.31", default-features = false }

# Cryptography and security
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
aes = { version = "0.8.3", default-features = false }
chacha20 = { version = "0.9.1", default-features = false }
poly1305 = { version = "0.8.0", default-features = false }
x25519-dalek = { version = "2.0.0", default-features = false }
ed25519-dalek = { version = "2.1.0", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
blake3 = { version = "1.5.0", default-features = false }

# File system support
fatfs = { version = "0.3.6", default-features = false }
ext4 = { version = "0.14.0", default-features = false }

# Network support
smoltcp = { version = "0.10.0", default-features = false }
etherparse = { version = "0.13.0", default-features = false }

# Process management
nix = { version = "0.27.1", default-features = false }

# AI/ML support
onnxruntime = { version = "0.0.14", default-features = false }
tract-core = { version = "0.20.7", default-features = false }
tract-onnx = { version = "0.20.7", default-features = false }

[features]
default = ["fs", "network", "device", "process", "security", "ai"]
fs = []
network = []
device = []
process = []
security = []
ai = []

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
