[package]
name = "userland"
version = "0.1.0"
authors = ["Sahibzada Allahyar"]
edition = "2021"
description = "User-space applications for Democratizing AI OS"
repository = "https://github.com/sahibzadaallahyar/Democratizing-AI-OS"
license = "MIT OR Apache-2.0"

[lib]
name = "userland"
path = "src/lib.rs"

[dependencies]
# Core dependencies
kernel = { path = "../kernel" }
drivers = { path = "../drivers" }
services = { path = "../services" }
log = { version = "0.4.20", default-features = false }
bitflags = "2.4.2"
spin = "0.9.8"
hashbrown = { version = "0.14.3", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# Numeric and data handling
num-traits = { version = "0.2.17", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
static_assertions = "1.1.0"
paste = "1.0.14"
cfg-if = "1.0.0"

# Data structures and algorithms
bitvec = { version = "1.0.1", default-features = false }
smallvec = { version = "1.11.2", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
heapless = "0.8.0"
tinyvec = { version = "1.6.0", default-features = false }
either = { version = "1.9.0", default-features = false }
itertools = { version = "0.12.0", default-features = false }

# Serialization and data formats
serde = { version = "1.0.195", default-features = false }
uuid = { version = "1.6.1", default-features = false }
time = { version = "0.3.31", default-features = false }

# Shell and command line
rustyline = { version = "12.0.0", default-features = false }
clap = { version = "4.4.12", default-features = false }
shellwords = { version = "1.1.0", default-features = false }
shell-words = { version = "1.1.0", default-features = false }

# Terminal and UI
termion = { version = "2.0.3", default-features = false }
crossterm = { version = "0.27.0", default-features = false }
tui = { version = "0.19.0", default-features = false }

# AI/ML support
onnxruntime = { version = "0.0.14", default-features = false }
tract-core = { version = "0.20.7", default-features = false }
tract-onnx = { version = "0.20.7", default-features = false }
tokenizers = { version = "0.15.0", default-features = false }
rust-bert = { version = "0.21.0", default-features = false }

# Monitoring and debugging
sysinfo = { version = "0.29.11", default-features = false }
procfs = { version = "0.15.1", default-features = false }
backtrace = { version = "0.3.69", default-features = false }

# Network tools
reqwest = { version = "0.11.23", default-features = false }
url = { version = "2.5.0", default-features = false }
ipnetwork = { version = "0.20.0", default-features = false }

# Storage tools
serde_json = { version = "1.0.111", default-features = false }
toml = { version = "0.8.8", default-features = false }
yaml-rust = { version = "0.4.5", default-features = false }

[features]
default = ["shell", "ai", "monitor", "network", "storage", "debug"]
shell = []
ai = []
monitor = []
network = []
storage = []
debug = []

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
